Bug 300810 - Starting lokalize with --project does open a tab Project Overview without the overview
Summary: Starting lokalize with --project does open a tab Project Overview without the...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: project management (show other bugs)
Version: 1.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-29 13:23 UTC by Freek de Kruijf
Modified: 2012-06-04 21:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
picture after opening (57.61 KB, image/png)
2012-05-29 13:26 UTC, Freek de Kruijf
Details
This is how it should look like (50.77 KB, image/png)
2012-05-29 13:28 UTC, Freek de Kruijf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freek de Kruijf 2012-05-29 13:23:50 UTC
Starting lokalize using "LANG=C lokalize --project vertalingen/KDE4branch.lokalize" used to open the tab Project Overview showing the list of maps in the project, docmessages and messages. However it shows the enclosed picture. At the bottom it shows the status of the project, so apparently it has been opened.

Reproducible: Always

Steps to Reproduce:
1.See above
2.
3.
Actual Results:  
It shows the attached picture.

Expected Results:  
Showing the second attached picture.
Comment 1 Freek de Kruijf 2012-05-29 13:26:04 UTC
Created attachment 71427 [details]
picture after opening
Comment 2 Freek de Kruijf 2012-05-29 13:28:35 UTC
Created attachment 71428 [details]
This is how it should look like
Comment 3 Nick Shaforostoff 2012-06-04 18:19:02 UTC
SVN commit 1298340 by shaforo:




 M  +2 -0      projecttab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1298340
Comment 4 Freek de Kruijf 2012-06-04 21:05:58 UTC
Thanks Nick!