BUG: 300810

svn path=/trunk/KDE/kdesdk/lokalize/; revision=1298340